[package]
name = "arkhash"
version = "1.1.0"
authors = ["Tobias Petrich <tobias.petrich@campus.tu-berlin.de>"]

[dependencies]
regex = "1"
chrono = "0.4"
termios = "0.3"
digest = "0.8.1"
sha-1 = "0.8.1"
md-5 = "0.8.0"
sha2 = "0.8.0"
hex = "0.3.2"
crossbeam-deque = "0.7.1"
num_cpus = "1.10.1"

[dev-dependencies]
assert_cmd = "0.11"
predicates = "1"
assert_cli = "0.6"
lazy_static = "1"